api consumption to be displayed in the console

--- a/promises.html
+++ b/promises.html
@@ -1,4 +1,4 @@
-<!-- <!DOCTYPE html>
+<!DOCTYPE html>
 <html>
   <head>
     <title>My JavaScript Page</title>
@@ -13,4 +13,4 @@
   <body>
     <!-- The rest of your HTML content goes here -->
   </body>
-</html> -->
+</html>
